# DL-KHU

./: .gitignore  02_PyTorch.ipynb  03_Univariate_Regression.ipynb  04_Binary_Classification.ipynb  05_MLP.ipynb  06_Multiclass_Classification_MLP.ipynb  07_Multiclass_Classification_MLP_Summary.ipynb  08_CNN.ipynb  09_Multiclass_Classification_CNN_Summary.ipynb  09_PyTorch_Lightning_CNN.ipynb  10_PyTorch_Lightning_CNN.ipynb  10_Tracking_TensorBoard.ipynb  11_Tracking_MLflow.ipynb  11_Tracking_TensorBoard.ipynb  12_Pretrained_Model_torchvision.ipynb  12_Tracking_MLflow.ipynb  13_Pretrained_Model_timm.ipynb  13_Tracking_WeightsBiases.ipynb  14_Naive_Classification_cat_dog.ipynb  14_Pretrained_Model_torchvision.ipynb  15_From_Scratch_torchvision.ipynb  15_Pretrained_Model_timm.ipynb  16_Naive_Classification_cat_dog.ipynb  16_Trasnfer_Learning_classification_torchvision.ipynb  17_From_Scratch_torchvision.ipynb  17_Transfer_Learning_classification_timm.ipynb  18_Trasnfer_Learning_classification_torchvision.ipynb  19_Transfer_Learning_classification_timm.ipynb  20_Grad_CAM.ipynb  21_Grad_CAM_with_library.ipynb  22_ViT.ipynb  23_ViT_transformers.ipynb  23_semantic_segmentation.ipynb  25_semantic_segmentation.ipynb  26_GAN_train_torch.py  26_SAM.ipynb  27_diffusion_basic_with_diffusers.ipynb  28_Gemini.yaml  28_diffusion_conditional_with_diffusers.ipynb  29_autoencoder.ipynb  (+46 more)
nbs/: 01_Loss_Function.ipynb  02_PyTorch.ipynb  04_Binary_Classification.ipynb  05_MLP.ipynb  06_Multiclass_Classification_MLP.ipynb  07_Multiclass_Classification_MLP_Summary.ipynb  08_CNN.ipynb  09_Multiclass_Classification_CNN_Summary.ipynb  10_PyTorch_Lightning_CNN.ipynb  11_Tracking_TensorBoard.ipynb  12_Tracking_MLflow.ipynb  13_Tracking_WeightsBiases.ipynb  14_Pretrained_Model_torchvision.ipynb  15_Pretrained_Model_timm.ipynb  16_Naive_Classification_cat_dog.ipynb  17_From_Scratch_torchvision.ipynb  18_Trasnfer_Learning_classification_torchvision.ipynb  19_Transfer_Learning_classification_timm.ipynb  20_Grad_CAM.ipynb  21_Grad_CAM_with_library.ipynb  22_ViT.ipynb  23_ViT_transformers.ipynb  25_semantic_segmentation.ipynb  29_autoencoder.ipynb  30_vae.ipynb  31_GAN.ipynb  32_diffusion_basic_with_diffusers.ipynb  33_diffusion_conditional_with_diffusers.ipynb  34_Function_Approximation.ipynb  35_Neural_Field.ipynb  36_NeRF.ipynb  37_Differential_Equations.ipynb  38_ODE_1D_PINN_PyTorch.ipynb  39_Laplace_2D_Analytical.ipynb  40_Laplace_2D_FDM_direct.ipynb  41_Laplace_2D_FDM_findiff.ipynb  42_Laplace_2D_FDM_iterative.ipynb  43_Laplace_2D_PINN_PyTorch.ipynb  44_Laplace_2D_PINN_PyTorch_Incomplete_BC.ipynb  45_Laplace_2D_SPINN_JAX.ipynb  (+16 more)
