[project]
name = "dl-khu"
version = "0.1.0"
description = "Deep Learning (DL) at Kyung Hee University (KHU)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "findiff>=0.12.1",
    "flax>=0.10.6",
    "google-genai>=1.14.0",
    "google-generativeai>=0.8.5",
    "grad-cam>=1.5.5",
    "gradio>=5.29.0",
    "hf-xet>=1.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jax[cuda12]>=0.5.3",
    "jupyter-bbox-widget>=0.6.0",
    "jupyterlab>=4.4.2",
    "kagglehub>=0.3.11",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "nbformat>=5.10.4",
    "opencv-python>=4.11.0.86",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "pycocotools>=2.0.8",
    "pysr>=1.5.6",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "supervision>=0.25.1",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "ultralytics>=8.3.132",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "nbdev>=2.4.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
